--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ManageApp-Front",
   "version": "1.0.0",
   "description": "ManageApp Plugin for FrontApp",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/lindsayTrusted/ManageApp-Front/issues"
   },
-  "homepage": "https://github.com/lindsayTrusted/ManageApp-Front#readme",
+  "homepage": "",
   "engines": {
     "node": "v12.18.2"
   }
